--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -14,10 +14,7 @@
   </div>
   <picture class="photo quote-img-mobile">
     <source
-      srcset="
-        /assets/images/avif/quote-img-mob-2x.avif 2x,
-        /assets/images/avif/quote-img-mob.avif    1x
-      "
+      srcset="/assets/images/avif/quote-img-mob-2x.avif 2x, /assets/images/avif/quote-img-mob.avif 1x"
       type="image/avif"
       alt="sport"
     />
@@ -31,8 +28,14 @@
       type="image/img"
       alt="sport"
     />
-    <img src="/assets/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" alt="sport"
-      width="335" height="242"/>
+    <img
+      src="/assets/images/jpg/quote-img-mob.jpg "
+      loading="lazy"
+      class="quote-img"
+      alt="sport"
+      width="335"
+      height="242"
+    />
   </picture>
 
   <picture class="photo quote-img-tab">
@@ -51,8 +54,14 @@
       type="image/img"
       alt="sport"
     />
-    <img src="/assets/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" alt="sport"
-      width="288" height="258"/>
+    <img
+      src="/assets/images/jpg/quote-img-tab.jpg "
+      loading="lazy"
+      class="quote-img"
+      alt="sport"
+      width="288"
+      height="258"
+    />
   </picture>
 
   <picture class="photo quote-img-desk">
@@ -67,15 +76,18 @@
       alt="sport"
     />
     <source
-      srcset="
-        /assets/images/jpg/quote-img-2x.jpg 2x,
-        /assets/images/jpg/quote-img.jpg    1x
-      "
+      srcset="/assets/images/jpg/quote-img-2x.jpg 2x, /assets/images/jpg/quote-img.jpg 1x"
       type="image/img"
       alt="sport"
     />
-    <img src="/assets/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" alt="sport"
-      width="444" height="242"/>
+    <img
+      src="/assets/images/jpg/quote-img.jpg "
+      loading="lazy"
+      class="quote-img"
+      alt="sport"
+      width="444"
+      height="242"
+    />
   </picture>
 
   <picture class="photo quote-img-favorite">
@@ -94,8 +106,14 @@
       type="image/img"
       alt="sport"
     />
-    <img src="/assets/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" alt="sport"
-      width="335" height="119"/>
+    <img
+      src="/assets/images/jpg/quote-img-fav.jpg "
+      loading="lazy"
+      class="quote-img"
+      alt="sport"
+      width="335"
+      height="119"
+    />
   </picture>
 
   <div class="daily-excercise">
