--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,11 +7,7 @@
         </svg>
       </a>
 
-      <button
-        class="menu-toggle js-open-menu"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-        aria-label="Open menu">
+      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu" aria-label="Open menu">
         <span class="line"></span>
         <span class="line"></span>
         <span class="line"></span>
