--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,11 @@
 <footer class="footer">
   <section class="footer-container container">
     <div class="footer-left">
-      <h2 class="footer-brand-name">
-        <a href="./index.html" aria-label="logo">
-          <svg width="132" height="24" class="footer-logo">
-            <use href="./images/icons.svg#logo"></use>
-          </svg>
-        </a>
-      </h2>
+      <a href="./index.html" aria-label="logo" class="footer-brand-name">
+        <svg width="132" height="24" class="footer-logo">
+          <use href="./images/icons.svg#logo"></use>
+        </svg>
+      </a>
 
       <load data-url="partials/social.html" />
     </div>
