--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -25,7 +25,7 @@
       srcset="/images/jpg/quote-img-mob-2x.jpg 2x, /images/jpg/quote-img-mob.jpg 1x"
       type="image/img"
     />
-    <img src="/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" width="335" height="242" />
+    <img alt="sport" src="/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" width="335" height="242" />
   </picture>
 
   <picture class="photo quote-img-tab">
@@ -41,7 +41,7 @@
       srcset="/images/jpg/quote-img-tab-2x.jpg 2x, /images/jpg/quote-img-tab.jpg 1x"
       type="image/img"
     />
-    <img src="/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" width="288" height="258" />
+    <img alt="sport" src="/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" width="288" height="258" />
   </picture>
 
   <picture class="photo quote-img-desk">
@@ -54,7 +54,7 @@
       type="image/webp"
     />
     <source srcset="/images/jpg/quote-img-2x.jpg 2x, /images/jpg/quote-img.jpg 1x" type="image/img" />
-    <img src="/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" width="444" height="242" />
+    <img alt="sport" src="/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" width="444" height="242" />
   </picture>
 
   <picture class="photo quote-img-favorite">
@@ -70,7 +70,7 @@
       srcset="/images/jpg/quote-img-fav-2x.jpg 2x, /images/jpg/quote-img-fav.jpg 1x"
       type="image/img"
     />
-    <img src="/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" width="335" height="119" />
+    <img alt="sport" src="/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" width="335" height="119" />
   </picture>
 
   <div class="daily-excercise">
