--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -1,4 +1,4 @@
-<section class="exersises container">
+<section class="exersises">
   <p class="loader-text">
     <span class="loader"> </span>
   </p>
