--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 20px 0;
+  padding-top: 20px;
   display: block; /* placeholder */
 }
 
@@ -151,7 +151,7 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    padding: 24px 0;
+    padding-top: 24px;
   }
 
   .header .social {
