--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,43 +1,45 @@
-<section class="hero container">
-  <div class="hero-text-container">
-    <h1 class="hero-title">
-      <svg class="hero-icon" width="59" height="59">
-        <use href="./images/icons.svg#icon-sun"></use>
-      </svg>
-      Get <span class="title-italic">Body</span> in <br />shape, Stay healthy
-    </h1>
-    <p class="hero-text">
-      Transform your physique and embrace a healthier lifestyle with our comprehensive fitness and nutrition support.
-    </p>
+<section class="hero">
+  <div class="container">
+    <div class="hero-text-container">
+      <h1 class="hero-title">
+        <svg class="hero-icon" width="59" height="59">
+          <use href="./images/icons.svg#icon-sun"></use>
+        </svg>
+        Get <span class="title-italic">Body</span> in <br />shape, Stay healthy
+      </h1>
+      <p class="hero-text">
+        Transform your physique and embrace a healthier lifestyle with our comprehensive fitness and nutrition support.
+      </p>
+    </div>
+    <div class="hero-tags-container">
+      <picture class="hero-content-img">
+        <source
+          srcset="/images/avif/small-preview.avif 1x, /images/avif/small-preview-2x.avif 2x"
+          type="image/avif"
+        />
+        <source
+          srcset="/images/webp/small-preview.webp 1x, /images/webp/small-preview-2x.webp 2x"
+          type="image/webp"
+        />
+        <source
+          srcset="/images/jpg/small-preview.jpg 1x, /images/jpg/small-preview-2x.jpg 2x"
+          type="image/img"
+        />
+        <img
+          src="/images/jpg/small-preview.jpg"
+          alt="happy leg to happy leg"
+          width="168"
+          height="100"
+          loading="lazy"
+        />
+      </picture>
+      <ul class="tag-list">
+        <li class="tag-item">#Sport</li>
+        <li class="tag-item">#Healthy</li>
+        <li class="tag-item">#Workout</li>
+        <li class="tag-item">#Diet</li>
+      </ul>
+    </div>
+    <div class="hero-img"></div>
   </div>
-  <div class="hero-tags-container">
-    <picture class="hero-content-img">
-      <source
-        srcset="/images/avif/small-preview.avif 1x, /images/avif/small-preview-2x.avif 2x"
-        type="image/avif"
-      />
-      <source
-        srcset="/images/webp/small-preview.webp 1x, /images/webp/small-preview-2x.webp 2x"
-        type="image/webp"
-      />
-      <source
-        srcset="/images/jpg/small-preview.jpg 1x, /images/jpg/small-preview-2x.jpg 2x"
-        type="image/img"
-      />
-      <img
-        src="/images/jpg/small-preview.jpg"
-        alt="happy leg to happy leg"
-        width="168"
-        height="100"
-        loading="lazy"
-      />
-    </picture>
-    <ul class="tag-list">
-      <li class="tag-item">#Sport</li>
-      <li class="tag-item">#Healthy</li>
-      <li class="tag-item">#Workout</li>
-      <li class="tag-item">#Diet</li>
-    </ul>
-  </div>
-  <div class="hero-img"></div>
 </section>
