--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -4,73 +4,80 @@
       <span class="icon-runner circle-icon"></span>
       <div>
         <h3 class="quote-title">
-          Quote of the day
+          <span>Quote of the day</span>
           <span class="icon-quotation quotation-mark"></span>
         </h3>
-        <p class="quote-text">Excellence is not a singular act but a habit. You are what you do repeatedly.</p>
-        <p class="quote-author">Shaquille O'Neal</p>
+        <p class="quote-text"></p>
+        <p class="quote-author"></p>
       </div>
     </div>
   </div>
   <picture class="photo quote-img-mobile">
-    <source
-      srcset="/images/avif/quote-img-mob-2x.avif 2x, /images/avif/quote-img-mob.avif 1x"
-      type="image/avif"
-    />
-    <source
-      srcset="/images/webp/quote-img-mob-2x.webp 2x, /images/webp/quote-img-mob.webp 1x"
-      type="image/webp"
-    />
-    <source
-      srcset="/images/jpg/quote-img-mob-2x.jpg 2x, /images/jpg/quote-img-mob.jpg 1x"
-      type="image/img"
-    />
+    <source srcset="/images/avif/quote-img-mob-2x.avif 2x, /images/avif/quote-img-mob.avif 1x" type="image/avif" />
+    <source srcset="/images/webp/quote-img-mob-2x.webp 2x, /images/webp/quote-img-mob.webp 1x" type="image/webp" />
+    <source srcset="/images/jpg/quote-img-mob-2x.jpg 2x, /images/jpg/quote-img-mob.jpg 1x" type="image/img" />
     <img alt="sport" src="/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" width="335" height="242" />
   </picture>
 
   <picture class="photo quote-img-tab">
-    <source
-      srcset="/images/avif/quote-img-tab-2x.avif 2x, /images/avif/quote-img-tab.avif 1x"
-      type="image/avif"
-    />
-    <source
-      srcset="/images/webp/quote-img-tab-2x.webp 2x, /images/webp/quote-img-tab.webp 1x"
-      type="image/webp"
-    />
-    <source
-      srcset="/images/jpg/quote-img-tab-2x.jpg 2x, /images/jpg/quote-img-tab.jpg 1x"
-      type="image/img"
-    />
+    <source srcset="/images/avif/quote-img-tab-2x.avif 2x, /images/avif/quote-img-tab.avif 1x" type="image/avif" />
+    <source srcset="/images/webp/quote-img-tab-2x.webp 2x, /images/webp/quote-img-tab.webp 1x" type="image/webp" />
+    <source srcset="/images/jpg/quote-img-tab-2x.jpg 2x, /images/jpg/quote-img-tab.jpg 1x" type="image/img" />
     <img alt="sport" src="/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" width="288" height="258" />
   </picture>
 
   <picture class="photo quote-img-desk">
-    <source
-      srcset="/images/avif/quote-img-2x.avif 2x, /images/avif/quote-img.avif 1x"
-      type="image/avif"
-    />
-    <source
-      srcset="/images/webp/quote-img-2x.webp 2x, /images/webp/quote-img.webp 1x"
-      type="image/webp"
-    />
+    <source srcset="/images/avif/quote-img-2x.avif 2x, /images/avif/quote-img.avif 1x" type="image/avif" />
+    <source srcset="/images/webp/quote-img-2x.webp 2x, /images/webp/quote-img.webp 1x" type="image/webp" />
     <source srcset="/images/jpg/quote-img-2x.jpg 2x, /images/jpg/quote-img.jpg 1x" type="image/img" />
     <img alt="sport" src="/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" width="444" height="242" />
   </picture>
 
-  <picture class="photo quote-img-favorite">
+  <picture class="photo quote-img-favorite-desk">
+    <source srcset="/images/avif/quote-img-fav-2x.avif 2x, /images/avif/quote-img-fav.avif 1x" type="image/avif" />
+    <source srcset="/images/webp/quote-img-fav-2x.webp 2x, /images/webp/quote-img-fav.webp 1x" type="image/webp" />
+    <source srcset="/images/jpg/quote-img-fav-2x.jpg 2x, /images/jpg/quote-img-fav.jpg 1x" type="image/img" />
+    <img alt="sport" src="/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" width="239" height="141" />
+  </picture>
+
+  <picture class="photo quote-img-favorite-tab">
     <source
-      srcset="/images/avif/quote-img-fav-2x.avif 2x, /images/avif/quote-img-fav.avif 1x"
+      srcset="/images/avif/quote-img-tab-fav-2x.avif 2x, /images/avif/quote-img-tab-fav.avif 1x"
       type="image/avif"
     />
     <source
-      srcset="/images/webp/quote-img-fav-2x.webp 2x, /images/webp/quote-img-fav.webp 1x"
+      srcset="/images/webp/quote-img-tab-fav-2x.webp 2x, /images/webp/quote-img-tab-fav.webp 1x"
       type="image/webp"
     />
-    <source
-      srcset="/images/jpg/quote-img-fav-2x.jpg 2x, /images/jpg/quote-img-fav.jpg 1x"
-      type="image/img"
+    <source srcset="/images/jpg/quote-img-tab-fav-2x.jpg 2x, /images/jpg/quote-img-tab-fav.jpg 1x" type="image/img" />
+    <img
+      alt="sport"
+      src="/images/jpg/quote-img-tab-fav.jpg "
+      loading="lazy"
+      class="quote-img"
+      width="335"
+      height="119"
     />
-    <img alt="sport" src="/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" width="335" height="119" />
+  </picture>
+
+  <picture class="photo quote-img-favorite-mobile">
+    <source
+      srcset="/images/avif/quote-img-mob-fav-2x.avif 2x, /images/avif/quote-img-mob-fav.avif 1x"
+      type="image/avif"
+    />
+    <source
+      srcset="/images/webp/quote-img-mob-fav-2x.webp 2x, /images/webp/quote-img-mob-fav.webp 1x"
+      type="image/webp"
+    />
+    <source srcset="/images/jpg/quote-img-mob-fav-2x.jpg 2x, /images/jpg/quote-img-mob-fav.jpg 1x" type="image/img" />
+    <img
+      alt="sport"
+      src="/images/jpg/quote-img-mob-fav.jpg "
+      loading="lazy"
+      class="quote-img"
+      width="335"
+      height="119"
+    />
   </picture>
 
   <div class="daily-excercise">
