--- a/src/css/daily-sports.css
+++ b/src/css/daily-sports.css
@@ -21,7 +21,7 @@
 .quote-container {
   display: inline-flex;
   align-items: flex-start;
-  gap: 16px;
+  gap: 18px;
   flex-shrink: 0;
   position: relative;
   width: 100%;
@@ -49,7 +49,7 @@
   justify-content: space-between;
   margin-bottom: 8px;
   position: relative;
-  width: 243px;
+  width: 100%;
 }
 
 .quote-text {
@@ -171,7 +171,8 @@
   }
 
   .quote-title {
-    width: 574px;
+    width: 270px;
+    max-width: 270px;
     margin-bottom: 6px;
   }
 
@@ -204,7 +205,7 @@
     row-gap: 32px;
     column-gap: 0;
     margin-top: 0;
-    width: 494px;
+    width: 444px;
   }
 
   .quote {
@@ -214,7 +215,8 @@
   }
 
   .quote-title {
-    width: 364px;
+    width: 314px;
+    max-width: 314px;
     margin-bottom: 6px;
   }
 
