social+footer fixes

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <section class="footer-container container">
+  <div class="footer-container container">
     <div class="footer-left">
       <a href="./index.html" aria-label="logo" class="footer-brand-name">
         <svg width="132" height="24" class="footer-logo">
@@ -28,5 +28,5 @@
 
       <p class="footer-copyright-item">&copy;2023</p>
     </div>
-  </section>
+  </div>
 </footer>
