--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -1,20 +1,38 @@
 <ul class="social">
   <li>
-    <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link" aria-label="facebook">
+    <a
+      href="https://www.facebook.com/goITclub/"
+      target="_blank"
+      class="social-link"
+      aria-label="facebook"
+      rel="noopener noreferrer external"
+    >
       <svg class="social-icon" width="28" height="28">
         <use href="./images/icons.svg#facebook"></use>
       </svg>
     </a>
   </li>
   <li>
-    <a href="https://www.instagram.com/goitclub/ " target="_blank" class="social-link" aria-label="instagram">
+    <a
+      href="https://www.instagram.com/goitclub/ "
+      target="_blank"
+      class="social-link"
+      aria-label="instagram"
+      rel="noopener noreferrer external"
+    >
       <svg class="social-icon" width="28" height="28">
         <use href="./images/icons.svg#instagram"></use>
       </svg>
     </a>
   </li>
   <li>
-    <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link" aria-label="youtube">
+    <a
+      href="https://www.youtube.com/c/GoIT"
+      target="_blank"
+      class="social-link"
+      aria-label="youtube"
+      rel="noopener noreferrer external"
+    >
       <svg class="social-icon" width="28" height="28">
         <use href="./images/icons.svg#youtube"></use>
       </svg>
