category/exercise card width

--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -2,7 +2,7 @@
   <div class="quote">
     <div class="quote-container">
       <span class="icon-runner circle-icon"></span>
-      <div>
+      <div class="quote-about">
         <h3 class="quote-title">
           <span>Quote of the day</span>
           <span class="icon-quotation quotation-mark"></span>
