--- a/src/css/daily-sports.css
+++ b/src/css/daily-sports.css
@@ -36,7 +36,13 @@
 
 .quotation-mark {
   color: var(--primary-light-color);
-  font-size: 20px;
+  font-size: 22px;
+  position: relative;
+  top: -2px;
+}
+
+.quote-about {
+  width: 100%;
 }
 
 .quote-title {
@@ -49,7 +55,6 @@
   justify-content: space-between;
   margin-bottom: 8px;
   position: relative;
-  width: 243px;
 }
 
 .quote-text {
@@ -162,6 +167,8 @@
   .daily-excercise {
     grid-column: 1;
     grid-row: 2;
+    height: 250px;
+    padding: 40px;
   }
 
   .quote-title,
@@ -171,7 +178,6 @@
   }
 
   .quote-title {
-    width: 574px;
     margin-bottom: 6px;
   }
 
@@ -204,7 +210,7 @@
     row-gap: 32px;
     column-gap: 0;
     margin-top: 0;
-    width: 494px;
+    width: 444px;
   }
 
   .quote {
@@ -214,7 +220,6 @@
   }
 
   .quote-title {
-    width: 364px;
     margin-bottom: 6px;
   }
 
