--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -35,6 +35,10 @@
   display: none;
 }
 
+.favorites .excercise-sub {
+  margin-bottom: 0;
+}
+
 @media screen and (min-width: 768px) {
   .favorites .daily-sport-section {
     grid-template-columns: 1fr 1fr;
