--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -1,4 +1,5 @@
-<section class="exersises">
+<section class="content-wrap">
   <div class="content"></div>
+
   <div class="pagination"></div>
 </section>
