--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -1,7 +1,8 @@
-<section class="exersises">
+<section class="content-wrap">
   <p class="loader-text">
     <span class="loader"> </span>
   </p>
+
   <div class="content"></div>
 
   <div class="pagination"></div>
