--- a/src/css/modal-exercise.css
+++ b/src/css/modal-exercise.css
@@ -7,17 +7,18 @@
   width: 100%;
   height: 100%;
   background: rgba(4, 4, 4, 0.4);
+  overflow-y: scroll;
 }
 
 .modal-window {
-  position: fixed;
+  position: absolute;
   display: flex;
   flex-direction: column;
   z-index: 30;
   background: #242424;
-  top: 50%;
+  top: 10px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   max-width: 335px;
   min-width: 285px;
   width: calc(100% - 40px);
