--- a/src/partials/exercise-filter.html
+++ b/src/partials/exercise-filter.html
@@ -1,7 +1,7 @@
 <div class="content-filter-container">
   <div class="filter-title-container">
     <p class="filter-title">
-      Exercises <span class="js-title-slash is-hide">/</span><span class="js-title is-hide"></span>
+      <button class="breadcrumb" data-category="Muscles">Exercises</button> <span class="js-title-slash is-hide">/</span><span class="js-title is-hide"></span>
     </p>
   </div>
   <div class="filter-block">
