favorites html, content height

--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -1,4 +1,4 @@
-<section class="daily-sport-section">
+<div class="daily-sport-section">
   <div class="quote">
     <div class="quote-container">
       <span class="icon-runner circle-icon"></span>
@@ -93,4 +93,4 @@
       </p>
     </div>
   </div>
-</section>
+</div>
