--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -1,4 +1,4 @@
-<section class="content-wrap">
+<div class="content-wrap">
   <p class="loader-text">
     <span class="loader"> </span>
   </p>
@@ -6,4 +6,4 @@
   <div class="content"></div>
 
   <div class="pagination"></div>
-</section>
+</div>
