--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -1,4 +1,5 @@
 .favorites {
+  padding-bottom: 20px;
   padding-top: 90px;
 }
 
@@ -65,6 +66,10 @@
   text-align: center;
 }
 
+.favorites .filter-title {
+  margin-bottom: 20px;
+}
+
 @media screen and (min-width: 768px) {
   .favorites .daily-sport-section {
     grid-template-columns: 1fr 1fr;
@@ -100,13 +105,13 @@
     padding: 25px;
   }
 
-  .favorites .content {
-    margin-bottom: 0;
-  }
-
   .favorites .empty {
     font-size: 18px;
     padding: 92px 0 185px 0;
+  }
+
+  .favorites .filter-title {
+    margin-bottom: 32px;
   }
 }
 
@@ -132,7 +137,7 @@
 
   .favorites .content {
     height: 100%;
-    max-height: 670px;
+    max-height: 500px;
     overflow-y: scroll;
   }
 
